项目结构调整，引用统一地利父项目；调整jdk版本为13；升级uap-sdk；升级版本号为1.1.0。